--- a/app/assets/stylesheets/animal/animal_show.scss
+++ b/app/assets/stylesheets/animal/animal_show.scss
@@ -9,6 +9,7 @@
     img{
       height: 100%;
       width: 100%;
+      object-fit: cover;
       display: block;
       transition-duration: 0.3s;
       &:hover{
@@ -58,6 +59,7 @@
         img{
           width: 100%;
           height: 100%;
+          object-fit: cover;
           display: block;
           transition-duration: 0.3s;
           &:hover{
@@ -77,6 +79,7 @@
         img{
           width: 100%;
           height: 100%;
+          object-fit: cover;
           display: block;
           transition-duration: 0.3s;
           &:hover{
