--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="animals__container">
     <div class="animals__container__content">
-      <% @animals.each do |animal| %>
+      <% @animals.find_each do |animal| %>
         <%= link_to "animals/#{animal.id}", class: "animal-show__link" do%>
           <div class="animal-show__link--cover">
             <div class="animal-show__link--cover--image">
