--- a/app/views/animals/_animals.html.erb
+++ b/app/views/animals/_animals.html.erb
@@ -1,5 +1,5 @@
 <div class="animals__container__content">
-  <% @animals.find_each do |animal| %>
+  <% @animals.each do |animal| %>
     <%= link_to "animals/#{animal.id}", class: "animal-show__link" do%>
       <div class="animal-show__link--cover">
         <div class="animal-show__link--cover--image">
