メッセージ、コメントに関するバリデーション

--- a/app/views/layouts/animals.html.erb
+++ b/app/views/layouts/animals.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/flash'%>
     <div class="header">
       <% if user_signed_in?%>
         <a href="/" class="header--icon">
