--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/flash'%>
     <div class="top-content">
       <% if user_signed_in? %>
         <video muted class="main-content__video--mp4" src="/assets/top_middle-ce66ef5d21e576f5429b241a4d31df7699e836f8431be20eaf5ad6dfb726f238.mp4" autoplay loop style="object-fit: cover;">
