--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/flash'%>
     <div class="header">
       <a href="/" class="header--icon">
         <%= image_tag 'logo_bottom.png' %>
