ユーザー編集機能の実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -142,7 +142,7 @@
     </div>
     <div class="account-btns">
       <div class="account-btns__edit">
-        <%= link_to "#" do%>
+        <%= link_to edit_user_registration_path do%>
           <button>EDIT ACCOUNT</button>
         <% end %>
       </div>
