ユーザー編集画面の実装

--- a/app/assets/stylesheets/shared/error.scss
+++ b/app/assets/stylesheets/shared/error.scss
@@ -2,3 +2,12 @@
   margin-top: 10px;
   color: #3EC1C9;
 }
+
+#error_explanation{
+  ul{
+    li{
+      margin-top: 10px;
+      color: #3EC1C9;
+    }
+  }
+}
