--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,54 +1,48 @@
-<h2>ユーザー情報の編集</h2>
+<main class="user-show__main">
+  <section class="profile">
+    <div class="profile--edit">
+      <h1>アカウント情報編集</h1>
+    </div>
+    <div class="profile--edit__container">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="user-edit-field">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "edit-email", class: "user-edit-form__input", placeholder: "新しいメールアドレス" %>
+        </div>
+        <%= render partial: "/shared/error", locals: { key: :email} %>
 
-  <div class="field">
-    <%= f.label :icon %><br />
-    <%= f.file_field :icon, id: "edit-icon" %>
-  </div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
 
-  <div class="field">
-    <%= f.label :header_image %><br />
-    <%= f.file_field :header_image, id: "edit-header-image" %>
-  </div>
+        <div class="user-edit-field">
+          <%= f.label :password %>
+          <%= f.password_field :password, autocomplete: "new-password", id: "edit-password__new", class: "user-edit-form__input", placeholder: "新しいパスワード"%>
+          <% if @minimum_password_length %>
+            <br />
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div>
+        <%= render partial: "/shared/error", locals: { key: :password} %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", id: "edit-name" %>
-  </div>
+        <div class="user-edit-field">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "edit-password-confirmation__new", class: "user-edit-form__input", placeholder: "新しいパスワード(確認)" %>
+        </div>
+        <%= render partial: "/shared/error", locals: { key: :password_confirmation} %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "edit-email" %>
-  </div>
+        <div class="user-edit-field">
+          <%= f.label :current_password %>
+          <%= f.password_field :current_password, autocomplete: "current-password", id: "edit-current-password", class: "user-edit-form__input" %>
+        </div>
+        <%= render partial: "/shared/error", locals: { key: :current_password} %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "new-password", id: "edit-password__new"%>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "edit-password-confirmation__new" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %><br />
-    <%= f.password_field :current_password, autocomplete: "current-password", id: "edit-current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<%= link_to "Back", :back %>
+        <div class="user-edit__actions">
+          <%= f.submit "Update" %>
+        </div>
+      <% end %>
+    </div>
+  </section>
+</main>
+<%= render "shared/footer"%>
